; ModuleID = '/home/carl/AnghaBench/vlc/test/src/player/extr_player.c_player_on_signal_changed.c'
source_filename = "/home/carl/AnghaBench/vlc/test/src/player/extr_player.c_player_on_signal_changed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ctx = type { i32 }
%struct.report_signal = type { float, float }

@on_signal_changed = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, float, float, i8*)* @player_on_signal_changed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @player_on_signal_changed(i32* %0, float %1, float %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.ctx*, align 8
  %10 = alloca %struct.report_signal, align 4
  store i32* %0, i32** %5, align 8
  store float %1, float* %6, align 4
  store float %2, float* %7, align 4
  store i8* %3, i8** %8, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = call %struct.ctx* @get_ctx(i32* %11, i8* %12)
  store %struct.ctx* %13, %struct.ctx** %9, align 8
  %14 = getelementptr inbounds %struct.report_signal, %struct.report_signal* %10, i32 0, i32 0
  %15 = load float, float* %6, align 4
  store float %15, float* %14, align 4
  %16 = getelementptr inbounds %struct.report_signal, %struct.report_signal* %10, i32 0, i32 1
  %17 = load float, float* %7, align 4
  store float %17, float* %16, align 4
  %18 = load i32, i32* @on_signal_changed, align 4
  %19 = bitcast %struct.report_signal* %10 to <2 x float>*
  %20 = load <2 x float>, <2 x float>* %19, align 4
  %21 = call i32 @VEC_PUSH(i32 %18, <2 x float> %20)
  ret void
}

declare dso_local %struct.ctx* @get_ctx(i32*, i8*) #1

declare dso_local i32 @VEC_PUSH(i32, <2 x float>) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
